[package]
name = "smart-account-deployer"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.53.0"

[dependencies.smart-account]
path = "../smart-account"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.0"
